# spookfish

./: .travis.yml  LICENSE  README.md  config.sh  install_dependencies.sh
cpp/: CMakeLists.txt  CMakeLists_standalone.txt  SpookfishWt.sh  analyser.sh  backend.cmake  videoanalyzer.cmake  wt.cmake
cpp/common/inc/: JsonFileParser.hpp  JsonParser.hpp  JsonStringParser.hpp  NotCopyable.hpp  TcpClient.hpp  TcpServer.hpp
cpp/common/src/: JsonFileParser.cpp  JsonParser.cpp  JsonStringParser.cpp  TcpClient.cpp  TcpServer.cpp
cpp/data/: ClusterConfig.json  DataPaths.json  descriptors.csv  label_name.txt  lable_name.txt  test.json
cpp/doc/: ProjectReport.md
cpp/inc/: CaptureVideo.hpp  DlibHandler.hpp  DrawingUtils.hpp  Enroll.hpp  FaceCluster.hpp  JsonParser.hpp  JsonWriter.hpp  LinkApp.hpp  NotCopyable.hpp  RequestHandler.hpp  RsNetDlib.hpp  Stats.hpp
cpp/src/: CaptureVideo.cpp  DlibHandler.cpp  DrawingUtils.cpp  Enroll.cpp  FaceCluster.cpp  JsonParser.cpp  JsonWriter.cpp  LinkApp.cpp  RequestHandler.cpp  Stats.cpp  bkup_main.cpp  main.cpp
cpp/ui/: resources
cpp/ui/css/: styleSheet.css
cpp/ui/data/: Request_format.json
cpp/ui/inc/: ImageResource.hpp  LinkApp.hpp  NewUi.hpp  SpookfishWt.hpp
cpp/ui/scripts/: SpookfishWt.sh  save.sh  youtube.py
cpp/ui/src/: ImageResource.cpp  LinkApp.cpp  NewUi.cpp  SpookfishWt.cpp  main.cpp
cpp/ui/tmp/: images
scripts/: faceAlign.py  imageSearch.py  newSearch.py
scripts/landmark/: facialLandmarkDetector.py
testcode/client/: CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  connection.json  main.cpp
testcode/server/: CMakeLists.txt  TcpServer.cpp  TcpServer.hpp  main.cpp
wt/hello/: CMakeLists.txt
wt/spookfishWt/: CMakeLists.txt  README.md  SpookfishWt.cpp  SpookfishWt.hpp  SpookfishWt.sh  main.cpp  resources  styleSheet.css
